[gd_scene load_steps=4 format=3 uid="uid://2oi03arkipp7"]

[ext_resource type="Script" path="res://next_map.gd" id="1_wrt6v"]
[ext_resource type="Texture2D" uid="uid://g6loeao8u5kx" path="res://swamp/special_item.png" id="2_is5o0"]
[ext_resource type="Texture2D" uid="uid://p0egi47igsln" path="res://swamp/special_Item_clickable.png" id="3_8f1m1"]

[node name="Next_map" type="Node2D"]
script = ExtResource("1_wrt6v")

[node name="Map" type="Sprite2D" parent="."]
z_index = 12
position = Vector2(584, 324)
scale = Vector2(3.73828, 3.45313)
texture = ExtResource("2_is5o0")

[node name="staybutton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 12
offset_left = 394.0
offset_top = 491.0
offset_right = 563.0
offset_bottom = 571.0

[node name="gobutton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 12
offset_left = 600.0
offset_top = 495.0
offset_right = 770.0
offset_bottom = 574.0

[node name="mapbuttton" type="TextureButton" parent="."]
visible = false
z_index = 12
offset_left = 3.0
offset_top = 575.0
offset_right = 77.0
offset_bottom = 647.0
texture_normal = ExtResource("3_8f1m1")
stretch_mode = 0

[connection signal="pressed" from="staybutton" to="." method="_on_staybutton_pressed"]
[connection signal="pressed" from="gobutton" to="." method="_on_gobutton_pressed"]
[connection signal="pressed" from="mapbuttton" to="." method="_on_mapbuttton_pressed"]
